# mapcolouriser

./: .gitignore  LICENSE  Procfile  README.md  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  vitest.config.js
.github/workflows/: ci.yml
app/: __init__.py  colouriser.py  countries.py  maps.py  routes.py  svg_injector.py
app/templates/: base.html  index.html  result.html
scripts/: check_svg.py  check_svg_marker.py
static/: main.css  main.js
tests/: conftest.py  test_check_svg.py  test_check_svg_marker.py  test_colouriser.py  test_countries.py  test_create_app.py  test_maps.py  test_routes.py  test_svg_injector.py
tests/js/: main.test.js
