[project]
name = "mapcolouriser"
version = "0.1.0"
description = "SVG country map colouriser — Flask web app for Toolforge"
requires-python = ">=3.11,<3.12"
license = "MIT-0"
license-files = ["LICENSE"]
authors = [
    { name = "Lokal_Profil" },
]
dependencies = [
    "flask>=3.0",
    "pycountry>=24.6.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
